welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:3: error: value lenths is not a member of Array[Int]
	for (i<-0 to nums.lenths) {}
                          ^